feat: edit cycle config route
